--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,7 @@ dependencies {
 
     api 'com.koushikdutta.ion:ion:2.+'
     implementation 'com.google.code.gson:gson:2.8.5'
+
+    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:design:28.0.0'
 }
