--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:design:28.0.0'
+    implementation 'com.android.support:design:28.0.0'
 }
