--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ dependencies {
     api 'com.koushikdutta.ion:ion:2.+'
     implementation 'com.google.code.gson:gson:2.8.5'
 
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'com.android.support:design:28.0.0'
+
+    implementation 'io.nlopez.smartlocation:library:3.3.3'
 }
