--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdkVersion 28
@@ -33,4 +34,5 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
 
     implementation 'io.nlopez.smartlocation:library:3.3.3'
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
 }
