--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,6 +27,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
+    implementation 'com.google.firebase:firebase-messaging:18.0.0'
+    implementation 'com.google.firebase:firebase-core:16.0.9'
+
     api 'com.koushikdutta.ion:ion:2.+'
     implementation 'com.google.code.gson:gson:2.8.5'
 
@@ -34,5 +37,6 @@ dependencies {
     implementation 'com.android.support:design:28.0.0'
 
     implementation 'io.nlopez.smartlocation:library:3.3.3'
-    implementation 'com.google.firebase:firebase-messaging:18.0.0'
+    implementation 'com.google.android.gms:play-services-location:16.0.0'
+
 }
