--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,11 +27,14 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".notification.MyFCMClass">
-            <intent-filter>
+        <service android:name=".notification.MyFCMClass"
+            android:exported="false">
+
+        <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
     </application>
 
 </manifest>
