client notification with firebase cloud message

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     implementation 'io.nlopez.smartlocation:library:3.3.3'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
 
+    //debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
+
 }
+apply plugin: 'com.google.gms.google-services'
