--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,14 +7,14 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher1"
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AfterLogin.ZonalOfficerActivity"></activity>
+        <activity android:name=".AfterLogin.NotificationActivity"></activity>
+        <activity android:name=".AfterLogin.ZonalOfficerActivity" />
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".AfterLogin.ReportIncidentFormActivity" />
         <activity android:name=".AfterLogin.ReliefFormActivity" />
@@ -27,14 +27,13 @@
             </intent-filter>
         </activity>
 
-        <service android:name=".notification.MyFCMClass"
+        <service
+            android:name=".notification.MyFCMClass"
             android:exported="false">
-
-        <intent-filter>
+            <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
-
     </application>
 
 </manifest>
