status change for incident

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,7 +38,7 @@ dependencies {
 
     implementation 'io.nlopez.smartlocation:library:3.3.3'
     implementation 'com.google.android.gms:play-services-location:16.0.0'
-
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
     //debugImplementation 'com.amitshekhar.android:debug-db:1.0.6'
 
 }
