--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,12 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AfterLogin.NotificationActivity"></activity>
+        <activity android:name=".AfterLogin.notificationActivities.NotificationActivity1"></activity>
+        <activity
+            android:name=".AfterLogin.notificationActivities.NotificationActivity2"
+            android:label="@string/title_activity_notification2"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".AfterLogin.notificationActivities.NotificationActivity" />
         <activity android:name=".AfterLogin.ZonalOfficerActivity" />
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".AfterLogin.ReportIncidentFormActivity" />
