--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,9 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AfterLogin.notificationActivities.NotificationActivity1"></activity>
+        <activity android:name=".AfterLogin.notificationActivities.GlobalNotificationReceiverActivity"></activity>
+        <activity android:name=".AfterLogin.notificationActivities.GlobalNotificationSenderActivity" />
+        <activity android:name=".AfterLogin.notificationActivities.NotificationActivity1" />
         <activity
             android:name=".AfterLogin.notificationActivities.NotificationActivity2"
             android:label="@string/title_activity_notification2"
